Fix spacing in suggested amount
- fix localization in suggested fee display

https://phabricator.wikimedia.org/T396008

--- a/src/scss/pattern-library-compatibility/field-container.scss
+++ b/src/scss/pattern-library-compatibility/field-container.scss
@@ -17,6 +17,9 @@
 
 	.radio-form-input {
 		margin-block-start: var(--flow-space, 1em);
+		label {
+			padding-left: 40px;
+		}
 	}
 }
 
